welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:7: error: ';' expected but 'return' found.
	} return 0
          ^close10:10: error: Unmatched closing brace '}' ignored here
 }
 ^